--- a/blog/templates/blog/post_confirm_delete.html
+++ b/blog/templates/blog/post_confirm_delete.html
@@ -1,16 +1,13 @@
 <!-- blog/templates/blog/post_confirm_delete.html -->
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <title>Confirmar eliminación de {{ post.titulo }}</title>
-</head>
-<body>
-    <h1>¿Estás seguro de que quieres eliminar "{{ post.titulo }}"?</h1>
-    <form method="post">
-        {% csrf_token %}
-        <button type="submit">Eliminar</button>
-        <a href="{% url 'post-detail' post.pk %}">Cancelar</a>
-    </form>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block title %}Confirmar eliminación de {{ post.titulo }}{% endblock %}
+
+{% block content %}
+<h1>¿Estás seguro de que quieres eliminar "{{ post.titulo }}"?</h1>
+<form method="post">
+    {% csrf_token %}
+    <button type="submit">Eliminar</button>
+    <a href="{% url 'post-detail' post.pk %}">Cancelar</a>
+</form>
+{% endblock %}
