--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,18 +1,15 @@
 <!-- blog/templates/blog/post_detail.html -->
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <title>{{ post.titulo }}</title>
-</head>
-<body>
-    <h1>{{ post.titulo }}</h1>
-    <p>{{ post.contenido }}</p>
-    <a href="{% url 'post-update' post.pk %}">Editar</a>
-    <form action="{% url 'post-delete' post.pk %}" method="post">
-        {% csrf_token %}
-        <button type="submit">Eliminar</button>
-    </form>
-    <a href="{% url 'post-list' %}">Volver al listado</a>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block title %}{{ post.titulo }}{% endblock %}
+
+{% block content %}
+<h1>{{ post.titulo }}</h1>
+<p>{{ post.contenido }}</p>
+<a href="{% url 'post-update' post.pk %}">Editar</a>
+<form action="{% url 'post-delete' post.pk %}" method="post">
+    {% csrf_token %}
+    <button type="submit">Eliminar</button>
+</form>
+<a href="{% url 'post-list' %}">Volver al listado</a>
+{% endblock %}
