--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,20 +1,18 @@
 <!-- blog/templates/post_list.html -->
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Posts</title>
-</head>
-<body>
-    <h1>Posts</h1>
-    <a href="{% url 'post-create' %}">Nuevo Post</a>
-    <ul>
+{% extends 'base.html' %}
+
+{% block title %}Posts - Mi Blog{% endblock %}
+
+{% block content %}
+<h1>Posts</h1>
+<a href="{% url 'post-create' %}">Nuevo Post</a>
+<ul>
     {% for post in posts %}
-        <li>
-            <a href="{% url 'post-detail' post.pk %}">{{ post.titulo }}</a>
-            <a href="{% url 'post-update' post.pk %}">Editar</a>
-            <a href="{% url 'post-delete' post.pk %}">Eliminar</a>
-        </li>
+    <li>
+        <a href="{% url 'post-detail' post.pk %}">{{ post.titulo }}</a>
+        <a href="{% url 'post-update' post.pk %}">Editar</a>
+        <a href="{% url 'post-delete' post.pk %}">Eliminar</a>
+    </li>
     {% endfor %}
-    </ul>
-</body>
-</html>
+</ul>
+{% endblock %}
